--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,11 +43,18 @@ body {
     gap: 10px;
 }
 
+.input-label {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
 .input-item {
     border: none;
     width: 306px;
     height: 50px;
     font-size: 20px;
+    padding: 4px 10px;
 }
 
 .submit-btn {
