--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,7 @@ body {
     width: 166px;
     height: 57px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .delete-btn {
@@ -79,6 +80,7 @@ body {
     width: 166px;
     height: 57px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .output-list {
